syntax = "proto2";

package dharma.prediction;

import "modules/common/proto/header.proto";
import "modules/prediction/proto/feature.proto";
import "modules/perception/proto/perception_obstacle.proto";

message PredictionObstacle {
  optional dharma.perception.PerceptionObstacle perception_obstacle = 1;
  optional double timestamp = 2;  // GPS time in seconds
  // the length of the time for this prediction (e.g. 10s)
  optional double predicted_period = 3;
  // can have multiple trajectories per obstacle
  repeated Trajectory trajectory = 4;
}

message PredictionObstacles {
  // timestamp is included in header
  optional dharma.common.Header header = 1;

  // make prediction for multiple obstacles
  repeated PredictionObstacle prediction_obstacle = 2;

}

